# TermsClassifier

./: .gitignore  README.md  pyproject.toml
configurations/: lora_config.yaml
notebook/: eval_on_modified_terms.ipynb  explore_ckpt.ipynb  prepare_dataset.ipynb  training.ipynb
src/app/: api.py
src/terms/: cli.py  config.py  constants.py  logs.py  pipeline.py  preprocess.py  schemas.py  utils.py
src/terms/model/: data.py  metrics.py  module.py  train.py
